--- a/app/src/main/res/layout/fragment_directors.xml
+++ b/app/src/main/res/layout/fragment_directors.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/fragment_movie_directors"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
