--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,34 @@
     android:id="@+id/main">
 
 
-    <androidx.fragment.app.FragmentContainerView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_open_gallery"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/container"
+        android:layout_marginTop="30dp"
+        android:text="@string/text_select_image_from_gallery"
+        android:textColor="#000"
+        android:textSize="25sp"
+        android:layout_marginBottom="20dp"
+        />
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_open_gallery"
+        android:scaleType="fitXY"
         />
 
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
